# ylangfx

./: .gitignore  README.md  new-javafx-project.sh  pom.xml
src/main/java/: module-info.java
src/main/java/net/smackem/ylang/: App.java  PrimaryController.java  RemoteImageProcService.java  SecondaryController.java
src/main/java/net/smackem/ylang/gui/: App.java  ImageProcController.java  SecondaryController.java
src/main/java/net/smackem/ylang/model/: ProcessImageResult.java  RemoteImageProcService.java
src/main/proto/: proto.sh
src/main/resources/net/smackem/ylang/: primary.fxml
src/main/resources/net/smackem/ylang/gui/: codeeditor.css  imageproc.css  imageproc.fxml  secondary.fxml
ylangfx-app/: pom.xml
ylangfx-app/src/main/java/net/smackem/ylang/gui/: CodeEditor.java  ImageProcController.java  JarMain.java  LibraryBrowser.java
ylangfx-app/src/main/java/net/smackem/ylang/model/: DeclModel.java  DeclType.java  FunctionDeclModel.java  GlobalDeclModel.java  ImageConversion.java  ModuleDeclModel.java  RemoteImageProcService.java  ScriptLibrary.java  ScriptModel.java  Yli.java
ylangfx-app/src/main/resources/net/smackem/ylang/gui/: codeeditor.css  imageproc.css  imageproc.fxml  librarybrowser.css
ylangfx-core/: pom.xml
ylangfx-core/src/main/antlr4/net/smackem/ylang/lang/: YLang.g4
ylangfx-core/src/main/java/net/smackem/ylang/execution/: Context.java  ExecutionException.java  Interpreter.java  MissingOverloadException.java  PanicException.java  Stack.java  StackException.java
ylangfx-core/src/main/java/net/smackem/ylang/interop/: MatrixComposition.java  Yln.java
ylangfx-core/src/main/java/net/smackem/ylang/jni/: MatrixComposition.java  Yln.java
ylangfx-core/src/main/java/net/smackem/ylang/lang/: AllocVisitor.java  BaseVisitor.java  CodeMap.java  Compiler.java  DebugInfo.java  Declaration.java  Emitter.java  EmittingVisitor.java  FileProvider.java  FunctionDecl.java  FunctionTable.java  GlobalDecl.java  Instruction.java  ModuleDecl.java  ModuleVisitor.java  OpCode.java  Preprocessor.java  Program.java
ylangfx-core/src/main/java/net/smackem/ylang/runtime/: BoolVal.java  CircleVal.java  FunctionVal.java  GeometryVal.java  HsvVal.java  ImageVal.java  ImageVal_IntArgb.java  IntRect.java  KernelVal.java  LineVal.java  ListVal.java  MapEntryVal.java  MapVal.java  MatrixVal.java  NumberVal.java  PointVal.java  PolygonVal.java  RangeVal.java  RectVal.java  RgbVal.java  RuntimeContext.java  RuntimeParameters.java  StringVal.java  ToFloatFunction.java  Value.java  ValueType.java
ylangfx-core/src/main/java/net/smackem/ylang/util/: Values.java
ylangfx-core/src/main/resources/net/smackem/ylang/lib/: libalpha.ylang  libcolor.ylang  liberror.ylang  libfilter.ylang  libgeom.ylang  libkernel.ylang  libmorpho.ylang  libspatial.ylang  libstd.ylang  libutil.ylang
ylangfx-core/src/site/resources/: function-clusters.txt  hough.ylang  morpho.ylang  randommap.ylang  samples.ylang
ylangfx-core/src/test/java/net/smackem/ylang/: IntegrationTest.java
ylangfx-core/src/test/java/net/smackem/ylang/execution/: InterpreterTest.java
ylangfx-core/src/test/java/net/smackem/ylang/lang/: AllocVisitorTest.java  Benchmarks.java  IntegrationTest.java  ModuleVisitorTest.java  PreprocessorTest.java
ylangfx-core/src/test/java/net/smackem/ylang/runtime/: HsvValTest.java  RectValTest.java
ylangfx-gui/: pom.xml
ylangfx-gui/src/main/java/net/smackem/ylang/gui/: App.java  CodeEditor.java  ImageProcController.java
ylangfx-gui/src/main/resources/net/smackem/ylang/gui/: codeeditor.css  imageproc.css  imageproc.fxml
ylangfx-model/: pom.xml
ylangfx-model/src/main/antlr4/net/smackem/ylang/lang/: YLang.g4
ylangfx-model/src/main/java/net/smackem/ylang/execution/: AddOperatorImpl.java  BinaryOperator.java  BinaryOperatorImpl.java  Context.java  Interpreter.java  Stack.java  StackException.java  SubOperatorImpl.java
ylangfx-model/src/main/java/net/smackem/ylang/lang/: AllocVisitor.java  AllocationExtractingVisitor.java  BaseVisitor.java  (+13 more)
ylangfx-model/src/site/resources/: function-clusters.txt  samples.ylang
ylangfx-model/src/test/java/net/smackem/ylang/: IntegrationTest.java
yln/: .gitignore  CMakeLists.txt  build_config.h.in  imageio.c  imageio.h  lib.c  main.c  net_smackem_ylang_interop_Yln.h  net_smackem_ylang_jni_Yln.h  test.c
yln/imaging/: CMakeLists.txt  color.c  color.h  image.c  image.h  imageio.c  imageio.h  imaging.c  imaging.h  kernel.c  kernel.h  rgba.c  rgba.h  types.h
yln/luabind/: CMakeLists.txt  luabind.c  luabind.h  luacolor.c  luacolor.h  luaimage.c  luaimage.h  luakernel.c  luakernel.h  luargba.c  luargba.h
yln/test/: imagetests.lua
yln/util/: CMakeLists.txt  resizearray.c  resizearray.h  types.h  util.c  util.h
(+110 files in other folders)
